--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <h1>MEOWFI</h1>
   <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Cat Gif" class="gif">
 
-  <p>🚀 Der erste Meme-Coin der dich wirklich <strong>to the moon</strong> katapultiert!</p>
+  <p>🚀 Der erste MeowMeme-Coin der dich <strong>to the Moon</strong> katapultiert!</p>
 
   <div class="price" id="solPrice">SOL Price: Loading...</div>
   <div class="price" id="meowfiPrice">MEOWFI Price: Loading...</div>
@@ -122,7 +122,7 @@
   <div class="bonding">Bonding Curve Status: Coming soon 📈</div>
 
   <p class="footer">
-    <a href="https://github.com/deinuser/meowfi-whitepaper" target="_blank">📄 Whitepaper</a><br>
+    <a href="https://github.com/SIntegration/MeowFI?tab=readme-ov-file#-meowfi--the-cats-outta-the-bag-on-the-solana-blockchain" target="_blank">📄 Whitepaper</a><br>
     Disclaimer: This is a meme coin for entertainment purposes only. No financial advice. No promises. Pure chaos.
   </p>
 
