--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <p>Token Infos:</p>
   <ul style="list-style-type:none;">
-    <li>Total Supply: 1.000.000.000 MEOW</li>
+    <li>Total Supply: 1.000.000.000 MEOWFI</li>
     <li>Contract: <a href="https://solscan.io/token/5t9Pbp9yaAbZF21119XsHWQYm48TR9cpd2d7LNRRpump" target="_blank">Hier auf Solscan</a></li>
     <li>Launch: 2025</li>
   </ul>
