--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <body>
 
   <h1>MEOWFI</h1>
+  <img src="https://github.com/SIntegration/MeowFI/blob/main/Meowfi_to_the_Moon_and_then_to_Mars.png?raw=true" alt="To the Moon" style="max-width: 300px; margin: 20px auto; display: block;">
   <img src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Cat Gif" class="gif">
 
   <p>🚀 Der erste MeowMeme-Coin der dich <strong>to the Moon</strong> katapultiert!</p>
