--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MEOWFI Meme Coin 🚀</title>
+  <link rel="icon" type="image/png" href="https://github.com/SIntegration/MeowFI/blob/main/Meowfi_to_the_Moon_and_then_to_Mars.png?raw=true" />
   <style>
     body {
       background: url('/mnt/data/dd.png') no-repeat center center fixed;
